# dbahn-delay-mlops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb
src/dbahn_delay/: __init__.py  config.py
src/dbahn_delay/data/: __init__.py  download.py  ingest.py  validate.py
src/dbahn_delay/features/: __init__.py  build.py  snapshot.py
src/dbahn_delay/live/: __init__.py  client.py  collect_changes.py  evaluate_day.py  fetch.py  parse.py  refresh_snapshot.py  station_map.json  stations.py
src/dbahn_delay/models/: __init__.py  baseline.py  cv.py  evaluate.py  retrain.py  train.py
src/dbahn_delay/serving/: __init__.py  app.py  features.py  loader.py  overlay.py
src/dbahn_delay/serving/static/: index.html
tests/: golden_predictions.json  regenerate_golden.py  test_api.py  test_board.py  test_collect_changes.py  test_cv_baseline.py  test_evaluate.py  test_features.py  test_ingest.py  test_live.py  test_overlay.py  test_retrain.py  test_smoke.py  test_triggers.py  test_validate.py
tests/fixtures/: make_fixture_bundle.py
tests/fixtures/bundle/: clf.txt  metadata.json  q50.txt  q90.txt  station_type_stats.parquet  train_stats.parquet  type_stats.parquet
