[project]
name = "dbahn-delay"
version = "0.1.0"
description = "End-to-end MLOps system predicting Deutsche Bahn train delays"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Kerem Alemdar" }]
dependencies = [
    "fastapi>=0.139.2",
    "holidays>=0.101",
    "huggingface-hub>=1.24.0",
    "lightgbm>=4.7.0",
    "matplotlib>=3.11.1",
    "mlflow>=3.14.0",
    "polars>=1.43.0",
    "pydantic-settings>=2.14.2",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jupyterlab>=4.6.2",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbahn_delay"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.mypy]
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "lightgbm.*", "holidays.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
